// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusDescription component Shallow tests does not render subaccount details on master account domains 1`] = `
<React.Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <DomainStatusTag
        status="unverified"
      />
      <div>
        <ReadyFor
          bounce={false}
          bounceDefault={false}
          dkim={false}
          sending={false}
        />
      </div>
    </LabelledValue>
  </Panel.Section>
</React.Fragment>
`;

exports[`StatusDescription component Shallow tests renders subaccount details 1`] = `
<React.Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <DomainStatusTag
        status="unverified"
      />
      <div>
        <ReadyFor
          bounce={false}
          bounceDefault={false}
          dkim={false}
          sending={false}
          subaccount={101}
        />
      </div>
    </LabelledValue>
  </Panel.Section>
  <Panel.Section>
    <LabelledValue
      label="Subaccount"
    >
      <SubaccountTag
        all={false}
        id={101}
        isDefault={false}
        master={false}
        receiveAll={false}
      />
    </LabelledValue>
  </Panel.Section>
</React.Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly blocked 1`] = `
<React.Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <DomainStatusTag
        status="blocked"
      />
      <div>
        <ReadyFor
          bounce={false}
          bounceDefault={false}
          dkim={false}
          sending={false}
        />
      </div>
    </LabelledValue>
  </Panel.Section>
</React.Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly pending 1`] = `
<React.Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <DomainStatusTag
        status="pending"
      />
      <div>
        <ReadyFor
          bounce={false}
          bounceDefault={false}
          dkim={false}
          sending={false}
        />
      </div>
    </LabelledValue>
  </Panel.Section>
</React.Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly unverified 1`] = `
<React.Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <DomainStatusTag
        status="unverified"
      />
      <div>
        <ReadyFor
          bounce={false}
          bounceDefault={false}
          dkim={false}
          sending={false}
        />
      </div>
    </LabelledValue>
  </Panel.Section>
</React.Fragment>
`;

exports[`StatusDescription component Shallow tests renders verification status correctly verified 1`] = `
<React.Fragment>
  <Panel.Section>
    <LabelledValue
      label={<StatusTooltipHeader />}
    >
      <div>
        <VerifiedIcon />
         
        <strong>
          Verified
        </strong>
      </div>
      <div>
        <ReadyFor
          bounce={false}
          bounceDefault={false}
          dkim={false}
          sending={false}
        />
      </div>
    </LabelledValue>
  </Panel.Section>
</React.Fragment>
`;
